--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,14 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.4",
+    "ipfs-core": "^0.7.1",
+    "nft.storage": "^1.4.0",
+    "npm": "^7.19.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.2.0",
+    "uint8arrays": "^2.1.5",
     "web3": "1.2.2"
   },
   "scripts": {
