--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.4",
-    "ipfs-core": "^0.7.1",
+    "ipfs-http-client": "^50.1.2",
     "nft.storage": "^1.4.0",
     "npm": "^7.19.0",
     "react": "16.11.0",
