--- a/client/package.json
+++ b/client/package.json
@@ -6,15 +6,15 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.4",
-    "aws-sdk": "^2.939.0",
-    "ipfs-http-client": "^50.1.2",
+    "axios": "^0.21.1",
+    "etherscan-api": "^10.0.5",
     "nft.storage": "^1.4.0",
+    "nodemailer": "^6.6.2",
     "npm": "^7.19.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.2.0",
-    "uint8arrays": "^2.1.5",
     "web3": "1.2.2"
   },
   "scripts": {
