added info page

--- a/server/amplify/backend/backend-config.json
+++ b/server/amplify/backend/backend-config.json
@@ -5,6 +5,16 @@
       "providerPlugin": "awscloudformation",
       "service": "Lambda",
       "dependsOn": []
+    },
+    "env": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    },
+    "environment": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
     }
   },
   "api": {
@@ -15,6 +25,22 @@
         {
           "category": "function",
           "resourceName": "postEmail",
+          "attributes": [
+            "Name",
+            "Arn"
+          ]
+        },
+        {
+          "category": "function",
+          "resourceName": "env",
+          "attributes": [
+            "Name",
+            "Arn"
+          ]
+        },
+        {
+          "category": "function",
+          "resourceName": "environment",
           "attributes": [
             "Name",
             "Arn"
