--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.4",
+    "@onramper/widget": "^1.1.6",
     "axios": "^0.21.1",
     "etherscan-api": "^10.0.5",
     "nft.storage": "^1.4.0",
@@ -13,6 +14,7 @@
     "npm": "^7.19.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "react-fade-in": "^2.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.2.0",
     "web3": "1.2.2"
